--- a/src/App.css
+++ b/src/App.css
@@ -60,14 +60,13 @@ img {
 * {
   background-color: black;
   color: white;
-  text-align: center;
 }
 
 .homebtn {
   font-size: 2rem;
   background-color: black;
   position: absolute;
-  margin: 10%;
+  margin: 5%;
   border-radius: 15px;
 }
 
@@ -83,6 +82,20 @@ img {
 }
 
 .buildpizza {
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+h4 {
+  font-size: .7rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+.sauce {
+  text-align: start;
+  display: flex;
+  flex-direction: column;
 }
